--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
