--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
 
+    implementation "androidx.appcompat:appcompat:1.2.0"
+
+    implementation "com.google.android.material:material:1.2.1"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
