--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.2.0"
 
     implementation "com.google.android.material:material:1.2.1"
+//    implementation 'com.android.support:appcompat-v7:27.1.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
