--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication"
-        tools:targetApi="31">
+        tools:targetApi="31"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+
+        >
+        <!--        android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
+<!--        android:theme="@style/Theme.MyApplication"-->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
